@@ -1,7 +1,7 @@
 Package: RcppMLPACK
 Type: Package
 Title: Rcpp Integration for MLPACK Library
-Version: 2.1.1-0.0
+Version: 3.0.1-0.0
 Date: 2017-01-25
 Author: Qiang Kou, Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
