@@ -32,11 +32,8 @@ Run a lars/lasso/elasticNet regression
 This function performs a lars, lasso or elastic net regression.
 }
 \examples{
-\dontrun{
-  data(trainSet)
-  mat <- trainSet[, -5]
-  y <- trainSet[,5]
-  tst <- testSet[, -5]
-  res <- LARS(mat, y, tst, 0.5, 0.5)
-}
+## LARS demo data set from MLPACK with limited rank
+data(lars)
+fit1 <- LARS(matX = lars_dependent_x, vecY = lars_dependent_y, 0.1, 0.1, FALSE)
+fit2 <- LARS(matX = lars_dependent_x, vecY = lars_dependent_y, 0.1, 0.1, TRUE)
 }
